--- a/H1EMU-Launcher/Properties/Resources.resx
+++ b/H1EMU-Launcher/Properties/Resources.resx
@@ -238,7 +238,10 @@
   <data name="StringResources_hr" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Language\StringResources.hr.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
-  <data name="StringResources_zh_cn" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Language\StringResources.zh-cn.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  <data name="StringResources_tr_TR" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Language\StringResources.tr-TR.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="StringResources_zh_CN" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Language\StringResources.zh-CN.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
 </root>
