--- a/H1EMU-Launcher/Properties/Resources.resx
+++ b/H1EMU-Launcher/Properties/Resources.resx
@@ -230,13 +230,22 @@
     <value>..\Resources\StandardButton_Pressed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="StringResources" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Language\StringResources.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+    <value>..\Language\StringResources.en.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="StringResources_bg_BG" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Language\StringResources.bg-BG.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="StringResources_fr_FR" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Language\StringResources.fr.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="StringResources_hr" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Language\StringResources.hr.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="StringResources_pl_PL" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Language\StringResources.pl-PL.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="StringResources_ru_RU" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Language\StringResources.ru-RU.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="StringResources_tr_TR" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Language\StringResources.tr-TR.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
