--- a/H1EMU-Launcher/Properties/Resources.resx
+++ b/H1EMU-Launcher/Properties/Resources.resx
@@ -244,6 +244,9 @@
   <data name="StringResources_hr" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Language\StringResources.hr.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="StringResources_nl_NL" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Language\StringResources.nl-NL.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="StringResources_pl_PL" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Language\StringResources.pl-PL.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
