--- a/H1EMU-Launcher/Properties/Resources.resx
+++ b/H1EMU-Launcher/Properties/Resources.resx
@@ -250,6 +250,9 @@
   <data name="StringResources_pl_PL" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Language\StringResources.pl-PL.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="StringResources_pt_PT" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Language\StringResources.pt-PT.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="StringResources_ru_RU" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Language\StringResources.ru-RU.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
