--- a/H1EMU-Launcher/Properties/Resources.resx
+++ b/H1EMU-Launcher/Properties/Resources.resx
@@ -127,8 +127,8 @@
   <data name="Arrow_Pressed" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Arrow_Pressed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="AuthKey" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\AuthKey.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="AccountKey" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\AccountKey.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Discord" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Discord.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
