--- a/H1EmuLauncher/Properties/Resources.resx
+++ b/H1EmuLauncher/Properties/Resources.resx
@@ -268,4 +268,7 @@
   <data name="Settings" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Settings.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Assets_256" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Assets_256.pack;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
