--- a/H1EmuLauncher/Properties/Resources.resx
+++ b/H1EmuLauncher/Properties/Resources.resx
@@ -199,15 +199,6 @@
   <data name="Shield" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Shield.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ShowPassword" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ShowPassword.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ShowPassword_Hover" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ShowPassword_Hover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ShowPassword_Pressed" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ShowPassword_Pressed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Signika" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Fonts\Signika.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
@@ -303,5 +294,29 @@
   </data>
   <data name="Copy_Pressed" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Copy_Pressed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="NextButton_Pressed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NextButton_Pressed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PrevButton_Pressed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PrevButton_Pressed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HideKey" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HideKey.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HideKey_Hover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HideKey_Hover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HideKey_Pressed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HideKey_Pressed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ShowKey" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ShowKey.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ShowKey_Hover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ShowKey_Hover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ShowKey_Pressed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ShowKey_Pressed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
