--- a/H1EmuLauncher/Properties/Resources.resx
+++ b/H1EmuLauncher/Properties/Resources.resx
@@ -319,4 +319,7 @@
   <data name="ShowKey_Pressed" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ShowKey_Pressed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Grain" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Grain.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
