--- a/H1EmuLauncher/Properties/Resources.resx
+++ b/H1EmuLauncher/Properties/Resources.resx
@@ -196,23 +196,23 @@
   <data name="StandardButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\StandardButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="StringResources" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Language\StringResources.en.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
-  </data>
   <data name="StringResources_bg_BG" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Language\StringResources.bg-BG.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="StringResources_de_DE" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Language\StringResources.de-DE.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="StringResources.en-EN" type="System.Resources.ResXFileRef, System.Windows.Forms">
+	  <value>..\Language\StringResources.en-EN.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="StringResources_es_ES" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Language\StringResources.es-ES.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
-  <data name="StringResources_fr_FR" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Language\StringResources.fr.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  <data name="StringResources.fr-FR" type="System.Resources.ResXFileRef, System.Windows.Forms">
+	<value>..\Language\StringResources.fr-FR.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
-  <data name="StringResources_hr" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Language\StringResources.hr.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  <data name="StringResources.hr-HR" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Language\StringResources.hr-HR.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="StringResources_nl_NL" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Language\StringResources.nl-NL.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
@@ -225,6 +225,9 @@
   </data>
   <data name="StringResources_ru_RU" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Language\StringResources.ru-RU.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="StringResources.se-SE" type="System.Resources.ResXFileRef, System.Windows.Forms">
+	<value>..\Language\StringResources.se-SE.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="StringResources_tr_TR" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Language\StringResources.tr-TR.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
