--- a/H1EmuLauncher/Properties/Resources.resx
+++ b/H1EmuLauncher/Properties/Resources.resx
@@ -322,4 +322,7 @@
   <data name="Game-Patch-2016" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Game-Patch-2016.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="H1EmuVoicePatch" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\H1EmuVoicePatch.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
