--- a/H1EmuLauncher/Properties/Resources.resx
+++ b/H1EmuLauncher/Properties/Resources.resx
@@ -238,9 +238,6 @@
   <data name="CustomClientConfig" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CustomClientConfig.ini;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Node-18.12.1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Node-18.12.1.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -330,5 +327,8 @@
   </data>
   <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="node-v22.7.0-win-x64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\node-v22.7.0-win-x64.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
