--- a/H1EmuLauncher/Properties/Resources.resx
+++ b/H1EmuLauncher/Properties/Resources.resx
@@ -319,9 +319,6 @@
   <data name="Game_Patch_2016" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Game_Patch_2016.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Game_Patch_KotK" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Game_Patch_KotK.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="H1Emu_Voice_Patch" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\H1Emu_Voice_Patch.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
@@ -330,5 +327,14 @@
   </data>
   <data name="Node_Files" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Node_Files.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="_7" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\7.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="BackgroundArt" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BackgroundArt.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ToolbarButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToolbarButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
