--- a/H1EmuLauncher/Properties/Resources.resx
+++ b/H1EmuLauncher/Properties/Resources.resx
@@ -235,4 +235,7 @@
   <data name="Assets_257" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Assets_257.pack;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="lz4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lz4.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
