--- a/H1EmuLauncher/Properties/Resources.resx
+++ b/H1EmuLauncher/Properties/Resources.resx
@@ -241,4 +241,7 @@
   <data name="Locales" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Locales.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Assets_258" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Assets_258.pack;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
